Removed Docker and improved documentation

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,14 @@
-# Copy this to .env and fill the values
+################################################################
+# Copy this to .env and fill in the values                     #
+################################################################
+
+# MAC address of the device to wake
 DEVICE_MAC=00:11:22:33:44:55
+
+# IP address of the device running Ollama
 DEVICE_IP=192.168.1.100
+
+# TCP port Ollama listens on
 DEVICE_PORT=11434
 
 # Where this service will listen (default :11434)
