Made use case generic

--- a/.env.example
+++ b/.env.example
@@ -5,16 +5,16 @@
 # MAC address of the device to wake
 DEVICE_MAC=00:11:22:33:44:55
 
-# IP address of the device running Ollama
+# IP address of the device to wake
 DEVICE_IP=192.168.1.100
 
-# TCP port Ollama listens on
+# TCP port of the device to wake
 DEVICE_PORT=11434
 
-# Where this service will listen (default :11434)
-# LISTEN_ADDR=:11434
+# Where this service will listen (default :8080)
+# LISTEN_ADDR=:8080
 
-# How often to poll for the Ollama port (seconds)
+# How often to poll for the device port (seconds)
 # POLL_INTERVAL_SEC=2
 
 # How long to wait for device to wake before timing out (seconds)
