--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ DEVICE_IP=192.168.1.100
 # TCP port of the device to wake
 DEVICE_PORT=11434
 
-# Where this service will listen (default :8080)
-# LISTEN_ADDR=:8080
+# Where this service will listen (default 8080)
+# LISTEN_ADDR=8080
 
 # How often to poll for the device port (seconds)
 # POLL_INTERVAL_SEC=2
